Fix classes (removed AlertMetadata)